cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project (proto)
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED )
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ChatMessage.proto)
SET_SOURCE_FILES_PROPERTIES(${PROTO_SRC} ${PROTO_HEADER} PROPERTIES GENERATED TRUE)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
