cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project (proto)
include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ChatMessage.proto)
set_source_files_properties(${PROTO_SRC} ${PROTO_HEADER} PROPERTIES GENERATED TRUE)
add_library(proto ${PROTO_HEADER} ${PROTO_SRC})
